# morphing

./: README.md
impl/: CMakeLists.txt
impl/src/auto_features/: features_io.cpp  features_io.h  low_res_curvature.cpp  low_res_curvature.h  main.cpp  main.h  simple_features.cpp  simple_features.h
impl/src/common/: constants.h  typedefs.h
impl/src/direct_optimization/: direct_optimization.cpp  direct_optimization.h  main.cpp  main.h
impl/src/embedding/: README.md  approx_bounding_sphere.cpp  approx_bounding_sphere.h  debug_geometry.cpp  debug_geometry.h  geometry_utils.cpp  geometry_utils.h  io.cpp  io.h  main.cpp  main.h  random_tetrahedron.cpp  random_tetrahedron.h  relaxation.cpp  relaxation.h
impl/src/feature_alignment/: feature_alignment.cpp  feature_alignment.h  grid_minimization.cpp  grid_minimization.h  main.cpp  main.h  parse_features.cpp  parse_features.h
impl/src/interpolation/: interpolate.cpp  interpolate.h  main.cpp  main.h
impl/src/master/: main.cpp
impl/src/measurement/: main.cpp  main.h  measurement.cpp  measurement.h
impl/src/measurement_v/: main.cpp  main.h  measurement_v.cpp  measurement_v.h
impl/src/overlay/: cpp_utils.cpp  cpp_utils.h  debug_utils.cpp  debug_utils.h  geometry_utils.cpp  geometry_utils.h  impersonator.cpp  impersonator.h  intersections_deprecated.cpp  intersections_deprecated.h  intersections_new.cpp  intersections_new.h  main.cpp  main.h  mesh_merger.cpp  mesh_merger.h  overlay.cpp  overlay.h  test_overlay.cpp  test_overlay.h
impl/src/pipeline/: main.cpp  main.h
morphs/: .gitignore
morphs/apple2_lowres@banana3_lowres@direct/: _apple2_lowres@banana3_lowres@direct-aligned.msrv
morphs/apple2_lowres@banana3_lowres@none/: _apple2_lowres@banana3_lowres@none-aligned.msr
morphs/apple2_lowres@banana3_lowres@poisson/: _apple2_lowres@banana3_lowres@poisson-aligned.msr  _apple2_lowres@banana3_lowres@poisson-aligned.msrv  _apple2_lowres@banana3_lowres@poisson.feat
morphs/apple2_lowres@female_lowres@none/: _apple2_lowres@female_lowres@none-aligned.msr  _apple2_lowres@female_lowres@none-aligned.msrv
morphs/apple2_lowres@female_lowres@poisson/: _apple2_lowres@female_lowres@poisson.feat
morphs/apple2_lowres@fish2_lowres@direct/: _apple2_lowres@fish2_lowres@direct-aligned.msr
morphs/apple2_lowres@fish2_lowres@none/: _apple2_lowres@fish2_lowres@none-aligned.msrv
morphs/apple2_lowres@fish2_lowres@poisson/: _apple2_lowres@fish2_lowres@poisson.feat
morphs/apple2_lowres@fixed_deer3_lowres@direct/: _apple2_lowres@fixed_deer3_lowres@direct-aligned.msr  _apple2_lowres@fixed_deer3_lowres@direct-aligned.msrv
morphs/apple2_lowres@fixed_deer3_lowres@poisson/: _apple2_lowres@fixed_deer3_lowres@poisson.feat
morphs/apple2_lowres@horse2_lowres@direct/: _apple2_lowres@horse2_lowres@direct-aligned.msr  _apple2_lowres@horse2_lowres@direct-aligned.msrv
morphs/apple2_lowres@horse2_lowres@poisson/: _apple2_lowres@horse2_lowres@poisson.feat
morphs/apple2_lowres@male_lowres@none/: _apple2_lowres@male_lowres@none-aligned.msr  _apple2_lowres@male_lowres@none-aligned.msrv
morphs/apple2_lowres@male_lowres@poisson/: _apple2_lowres@male_lowres@poisson.feat
morphs/apple2_lowres@orange2_lowres@direct/: _apple2_lowres@orange2_lowres@direct-aligned.msr
morphs/apple2_lowres@orange2_lowres@none/: _apple2_lowres@orange2_lowres@none-aligned.msrv
morphs/apple2_lowres@orange2_lowres@poisson/: _apple2_lowres@orange2_lowres@poisson-aligned.msr  _apple2_lowres@orange2_lowres@poisson-aligned.msrv  _apple2_lowres@orange2_lowres@poisson.feat
morphs/apple2_lowres@pear2_lowres@direct/: _apple2_lowres@pear2_lowres@direct-aligned.msrv
morphs/apple2_lowres@pear2_lowres@none/: _apple2_lowres@pear2_lowres@none-aligned.msr
morphs/apple2_lowres@pear2_lowres@poisson/: _apple2_lowres@pear2_lowres@poisson-aligned.msr  _apple2_lowres@pear2_lowres@poisson-aligned.msrv  _apple2_lowres@pear2_lowres@poisson.feat
morphs/apple2_lowres@shark2_lowres@direct/: _apple2_lowres@shark2_lowres@direct-aligned.msrv
morphs/apple2_lowres@shark2_lowres@none/: _apple2_lowres@shark2_lowres@none-aligned.msr
morphs/apple2_lowres@shark2_lowres@poisson/: _apple2_lowres@shark2_lowres@poisson.feat
morphs/apple2_lowres@stone_long_lowres@none/: _apple2_lowres@stone_long_lowres@none-aligned.msr  _apple2_lowres@stone_long_lowres@none-aligned.msrv
morphs/apple2_lowres@stone_long_lowres@poisson/: _apple2_lowres@stone_long_lowres@poisson.feat
morphs/apple2_lowres@stone_round_lowres@direct/: _apple2_lowres@stone_round_lowres@direct-aligned.msrv
morphs/apple2_lowres@stone_round_lowres@none/: _apple2_lowres@stone_round_lowres@none-aligned.msr
morphs/apple2_lowres@stone_round_lowres@poisson/: _apple2_lowres@stone_round_lowres@poisson.feat
morphs/apple2_lowres_rotx80@banana3_lowres@direct/: _apple2_lowres_rotx80@banana3_lowres@direct-aligned.msr  _apple2_lowres_rotx80@banana3_lowres@direct-aligned.msrv
morphs/apple2_lowres_rotx80@banana3_lowres@poisson/: _apple2_lowres_rotx80@banana3_lowres@poisson.feat
morphs/apple2_lowres_rotx80@female_lowres@direct/: _apple2_lowres_rotx80@female_lowres@direct-aligned.msr
morphs/apple2_lowres_rotx80@female_lowres@none/: _apple2_lowres_rotx80@female_lowres@none-aligned.msrv
python/: M_vs_V.py  M_vs_V_direct.py  M_vs_V_no_simple.py  M_vs_V_none.py  M_vs_V_poisson.py  M_vs_V_simple_only.py  M_vs_V_simple_only_but_no_sphere.py  M_vs_V_simple_sphere_only.py  _gather_measurements.py  _measurements.csv  _python_master.py  none_rotx_vs_norot_m.py  none_rotx_vs_norot_m_diss.py  none_rotx_vs_norot_m_nosimple.py  none_roty_vs_norot_m.py  none_roty_vs_norot_m_nosimple.py  none_rotz_vs_norot_m.py  none_rotz_vs_norot_m_nosimple.py  none_rotz_vs_norot_v.py  none_rotz_vs_norot_v_nosimple.py  none_vs_direct_m.py  none_vs_direct_m_norot.py  none_vs_direct_m_rotz.py  none_vs_direct_v.py  none_vs_direct_v_norot.py  none_vs_direct_v_rotz.py  none_vs_poisson_m.py  none_vs_poisson_m_norot.py  none_vs_poisson_m_nosimple.py  none_vs_poisson_m_rotz.py  none_vs_poisson_v.py  none_vs_poisson_v_norot.py  none_vs_poisson_v_nosimple.py  none_vs_poisson_v_rotz.py
(+2064 files in other folders)
